# MemInstrument

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE.TXT  README.md  build.sh
cmake/: meminstrument_macros.cmake
include/meminstrument/: BeforeOutflowPolicy.h  Config.h  Definitions.h.in  DummyMechanism.h  FancyChecksPass.h  GatherITargetsPass.h  GenerateChecksPass.h  GenerateWitnessesPass.h  ITarget.h  ITargetFilterPass.h  ITargetProvider.h  ITargetProviderPass.h  InstrumentationMechanism.h  InstrumentationPolicy.h  MemInstrumentPass.h  MemInstrumentSetupPass.h  MemSafetyAnalysisPass.h  SplayMechanism.h  Util.h  Witness.h  WitnessGraph.h  WitnessStrategy.h  perf_data.h
include/meminstrument/instrumentation_mechanisms/: DummyMechanism.h  ExampleMechanism.h  InstrumentationMechanism.h  LowfatMechanism.h  NoopMechanism.h  RuntimeStatMechanism.h  SleepMechanism.h  SoftBoundMechanism.h  SplayMechanism.h
include/meminstrument/instrumentation_policies/: AccessOnlyPolicy.h  BeforeOutflowPolicy.h  InstrumentationPolicy.h  NonePolicy.h  PointerBoundsPolicy.h
include/meminstrument/lifetimekiller/: LifeTimeKillerPass.h
include/meminstrument/optimizations/: AnnotationBasedRemovalPass.h  DominanceBasedCheckRemovalPass.h  DummyExternalChecksPass.h  ExampleExternalChecksPass.h  ExternalChecksInterface.h  HotnessBasedCheckRemovalPass.h  ITargetFilters.h  OptimizationInterface.h  OptimizationRunner.h  PerfData.h
include/meminstrument/pass/: CheckGeneration.h  DummyExternalChecksPass.h  ExternalChecksInterface.h  ExternalChecksPass.h  ITarget.h  ITargetFilters.h  ITargetGathering.h  MemInstrumentPass.h  PerfData.h  Setup.h  Util.h  Witness.h  (+2 more)
lib/: BeforeOutflowPolicy.cpp  CMakeLists.txt  Config.cpp  DummyMechanism.cpp  FancyChecksPass.cpp  GatherITargetsPass.cpp  GenerateChecksPass.cpp  GenerateWitnessesPass.cpp  ITarget.cpp  ITargetFilterPass.cpp  ITargetProvider.cpp  ITargetProviderPass.cpp  InstrumentationMechanism.cpp  InstrumentationPolicy.cpp  MemInstrumentPass.cpp  MemInstrumentSetupPass.cpp  MemSafetyAnalysisPass.cpp  RegisterPasses.cpp  SplayMechanism.cpp  Util.cpp  WitnessGraph.cpp  WitnessStrategy.cpp
lib/instrumentation_mechanisms/: DummyMechanism.cpp  ExampleMechanism.cpp  InstrumentationMechanism.cpp  LowfatMechanism.cpp  NoopMechanism.cpp  RuntimeStatMechanism.cpp  SleepMechanism.cpp  SoftBoundMechanism.cpp  SplayMechanism.cpp
lib/instrumentation_mechanisms/softbound/: InternalSoftBoundConfig.cpp  RunTimePrototypes.cpp  SoftBoundWitness.cpp
lib/instrumentation_policies/: AccessOnlyPolicy.cpp  BeforeOutflowPolicy.cpp  InstrumentationPolicy.cpp  NonePolicy.cpp  PointerBoundsPolicy.cpp
lib/lifetimekiller/: LifeTimeKillerPass.cpp
lib/optimizations/: AnnotationBasedRemovalPass.cpp  DominanceBasedCheckRemovalPass.cpp  DummyExternalChecksPass.cpp  ExampleExternalChecksPass.cpp  ExternalChecksInterface.cpp  HotnessBasedCheckRemovalPass.cpp  ITargetFilters.cpp  OptimizationInterface.cpp  OptimizationRunner.cpp  PerfData.cpp
lib/pass/: CheckGeneration.cpp  DummyExternalChecksPass.cpp  ExternalChecksInterface.cpp  ExternalChecksPass.cpp  ITarget.cpp  ITargetFilters.cpp  ITargetGathering.cpp  MemInstrumentPass.cpp  PerfData.cpp  Setup.cpp  Util.cpp  WitnessGeneration.cpp  WitnessGraph.cpp
lib/witness_strategies/: AfterInflowStrategy.cpp  NoneStrategy.cpp  WitnessStrategy.cpp
test/: CMakeLists.txt  lit.cfg  lit.site.cfg.in  occursInSameLine.py
test/cpp/: hello_world.cc  hello_world_cerr.cc  invoke.cc  invoke.cpp  new_vtables.cc  static_ctor.cc  static_ctor.cpp  static_vtables.cc  trivial_static_ctor.cc  trivial_static_ctor.cpp  vtables.cc
test/drop_attributes/: dont_drop_other.ll  dont_drop_willreturn.ll  drop_other.ll  drop_other_call.ll  drop_willreturn.ll  drop_willreturn_call.ll
test/example_mechanism/: simple.ll  simple_loop.c
test/external_checks/: external_invalid.ll  external_only.ll  external_valid.ll
test/gather_itargets_pass/: circular.ll  func_ptr.ll  loop.ll  sub-object.ll
test/gen_witnesses/: clear_list.ll  const_expr.ll  const_expr_gep.ll  const_expr_sel.ll  nullptr.ll
test/itarget_filtering/: dominance.ll  global_nosanitize.ll  malloc_partial_nosanitize.ll  pmda_requirement.ll
test/lowfat/: aggregate_contains_ptr.c  aggregate_contains_ptr_invalid.c  undef_arg.ll
test/narrowing/: array_of_structs.c  intra_struct_arith.c
test/noop_instr/: checkopt_integration.c  malloc_simple.c  simple.ll  splay_noop.c
test/optimizations/: annotated_dominated_dependent.ll  dominated_annotated_dependent.ll  dominated_annotated_independent.ll  dominated_deref_deref.c  dominated_deref_invariant.c  dominated_deref_invariant_softbound_no_opt.c  dummy_checks_only.ll  dummy_invalid.ll  dummy_valid.ll  example_checks_only.ll  example_invalid.ll  example_valid.ll  no_change_invariant.c
test/pass_sanity/: clang_integration.c
test/rt_stat/: function_call_valid.ll  loop.ll  verbose_stats.c  verbose_stats_pmda.c
test/setup/: ignore_fun_test.c  ignore_fun_test_negative.c  ignore_main_test.c  memcpy_pointer_obfuscation.c  regular_int_store.c
test/setup_pass/: loop.ll  nothing.ll  vararg_metadata.ll
test/sleep/: simple_loop.c
test/softbound/: simple.ll
test/splay/: after_end_charpointer_deref.c  after_end_pointer_deref.c  after_end_pointer_passing.c  aggregate_invalid.c  aggregate_valid.c  alloca.ll  almost_null_deref.c  atan.c  before_life_time_start.ll  ctor_dtor.c  double_struct.c  external_global_struct.c  fail_noreturn.ll  fputs.c  function_ptr_invalid.c  function_ptr_valid.c  global.ll  hello_world.ll  is_alpha.c  main_arg_invalid1.c  main_arg_invalid2.c  main_arg_valid.c  main_arg_valid_last.c  memalign.c  memcpy_invalid_dst.c  memcpy_invalid_overlap.c  memcpy_invalid_src.c  memcpy_valid.c  memmove_valid_overlap.c  memset_invalid.c  memset_valid.c  mmap.c  nested_alloca.ll  null_argument_passing.c  null_deref.c  one_after_global.c  one_after_malloc.c  one_after_stack.c  pvalloc.c  static_external_data.c  (+16 more)
test/undetectable/: static_oob_undetectable.c
test/witnessgraph_reduction/: loop.ll  select.ll
tools/: mi_compile.sh.in
(+157 files in other folders)
